# Tartiflette

./: Cargo.toml  README.md
fuzzer/: Cargo.toml
fuzzer/src/: cli.rs  config.rs  main.rs
fuzzer_maison/: Cargo.toml
fuzzer_maison/src/: app.rs  cli.rs  config.rs  dico.rs  feedback.rs  fuzz.rs  main.rs
fuzzers/fuzzer_libmicrodns/: Cargo.toml
fuzzers/giflib/: Cargo.toml
fuzzers/giflib/data/: breakpoints.txt  giftext_fuzz  snapshot_info.json
fuzzers/giflib/src/: main.rs  sysemu.rs
fuzzers/libmicrodns/: Cargo.toml  Readme.md
fuzzers/libmicrodns/data/: snapshot_info.json
fuzzers/libmicrodns/src/: executor.rs  main.rs
fuzzers/libmicrodns_multi/: Cargo.toml
fuzzers/libmicrodns_multi/data/: libmicrodns.so.1.0.0
fuzzers/libmicrodns_multi/src/: main.rs
fuzzers/quickjs/: Cargo.toml  Readme.md
fuzzers/quickjs/data/: breakpoints.txt  snapshot_info.json  tokens.json
fuzzers/quickjs/data/corpus/: bug_niklasb_1.js  bug_niklasb_2.js  test_array.js  test_enum.js  test_loop.js  test_math.js  test_number.js  test_regexp.js  test_string.js  test_typed_array.js  test_weakmap.js
fuzzers/quickjs/data/corpus_generator/: generator.js  package-lock.json  package.json
fuzzers/quickjs/data/corpus_generator/corpus_js/: bug_niklasb_1.js  bug_niklasb_2.js  test_array.js  test_enum.js  test_loop.js  test_math.js  test_number.js  test_regexp.js  test_string.js  test_typed_array.js  test_weakmap.js
fuzzers/quickjs/src/: executor.rs  fuzz.rs  main.rs  sysemu.rs
libafl_tartiflette/: Cargo.toml
scripts/: tartiflette-gdb.py
src/: cli.rs  config.rs  lib.rs  main.rs  memory.rs  vm.rs  x64.rs
src/bits/: Cargo.toml
src/bits/src/: lib.rs
src/fuzz/: Cargo.toml
src/fuzz/src/: app.rs  cli.rs  config.rs  corpus.rs  dico.rs  feedback.rs  fuzz.rs  input.rs  main.rs  mangle.rs  random.rs  sanitize.rs  utils.rs
src/memory/: Cargo.toml  mod.rs  paging.rs  phys.rs  virt.rs
src/memory/src/: lib.rs  paging.rs  phys.rs  virt.rs
src/paging/: Cargo.toml
src/paging/src/: lib.rs
src/snapshot/: Cargo.toml
src/snapshot/src/: lib.rs
src/utils/: bits.rs
tools/snapshot-tools/: snapshot-tool.py
vm/: Cargo.toml
vm/src/: lib.rs  main.rs  snapshot.rs  vm.rs  x64.rs
vm/src/backends/: hyperv.rs  kvm.rs  mod.rs
vm/src/bits/: Cargo.toml
vm/src/memory/: Cargo.toml  mod.rs  paging.rs  phys.rs  virt.rs
vm/src/memory/src/: lib.rs  paging.rs
vm/src/snapshot/src/: lib.rs
vm2/: Cargo.toml
vm2/src/: bits.rs  lib.rs  vm.rs  x64.rs
vm2/src/memory/: mod.rs  paging.rs  phys.rs  virt.rs
