[package]
name = "tartiflette"
version = "0.1.0"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.6.0"
kvm-bindings = "0.3.0"
libc = "0.2.85"
clap = "2.33.3"
bits = { path = "src/bits"}
paging = { path = "src/paging"}
