[package]
name = "fuzzer"
version = "0.1.0"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tartiflette-vm = { path = "../vm2"}
clap = "2.33.3"
libafl = "0.3.2"
