[package]
name = "libafl-tartiflette"
version = "0.5.0"
edition = "2018"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
license = "GPL-2.0"
repository = "https://github.com/MattGorko/Tartiflette"
keywords = ["kvm", "emulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = "0.5.0"
