[package]
name = "tartiflette-vm"
version = "0.1.0"
edition = "2018"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
license = "GPL-2.0"
repository = "https://github.com/MattGorko/Tartiflette"
keywords = ["kvm", "emulation"]
description= "Unicorn like wrappers around kvm"

[dependencies]
kvm-ioctls = "0.11.0"
kvm-bindings = "0.5.0"
nix = "0.23.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
vmm-sys-util = "0.9.0"
