[package]
name = "tartiflette-vm"
description= "Unicorn like wrappers around backends"
version = "0.2.0"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"
readme = "README.md"

documentation = "https://github.com/MattGorko/Tartiflette"
homepage = "https://github.com/MattGorko/Tartiflette"
repository = "https://github.com/MattGorko/Tartiflette"

keywords = ["kvm", "emulation"]
categories = []
license = "GPL-2.0"


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.11.0"
kvm-bindings = "0.5.0"
nix = "0.23.1"
vmm-sys-util = "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi"] }