[package]
name = "fuzzer-libmicrodns"
version = "0.5.0"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"

[dependencies]
tartiflette-vm = { path = "../../vm" }
libafl = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
