[package]
name = "fuzzer-quickjs"
version = "0.7.1"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"

[dependencies]
tartiflette-vm = { path = "../../vm" }
libafl = { version = "0.7.1", features = ["llmp_bind_public"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.11", features = ["cargo"] }
nix = "0.23.1"
