[package]
name = "fuzz"
version = "0.1.0"
authors = ["César Belley <cesar.belley@lse.epita.fr>",
           "Tanguy Dubroca <tanguy.dubroca@lse.epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.6.1"
kvm-bindings = "0.3.1"
clap = "2.33.3"
chrono = "0.4.19"
memmap = "0.7.0"
getrandom = "0.2.3"
md5 = "0.7.0"
bits = { path = "../bits"}
memory = { path = "../memory" }
snapshot = { path = "../snapshot" }
tartiflette = { path = "../../"}
